fixed z-index

--- a/web.css
+++ b/web.css
@@ -129,11 +129,11 @@ html {
 .glass-card-1 {
   right: -1rem;
   bottom: -1rem;
-  z-index: 0;
+  z-index: -1;
 }
 
 .glass-card-2 {
   left: -1rem;
   top: -1rem;
-  z-index: 0;
+  z-index: -1;
 }
